--- a/index.html
+++ b/index.html
@@ -1,58 +1,136 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
-	<meta name=viewport content="width=device-width, initial-scale=1">
-	<title>My First PSD To HTML Conversion</title>
 
-	<!--[if lte IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
+  <meta name=viewport content="width=device-width, initial-scale=1">
+  <title>My First PSD To HTML Conversion</title>
+
+  <!--[if lte IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 
 
 
 </head>
+
 <body>
 
 
-<section id="header">
-	<div class="container">
-		<div class="pt-5">
-			<nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Download</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-		</div>
-	</div>
-</section>
+  <section id="header">
+    <div class="container">
+      <div class="pt-5">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Download</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="row">
+        <div class="col-md-6  pt-6">
+          <h1 class="pudding">
+            Chocolate
+            pudding dessert
+            jelly
+          </h1>
+          <p class="fruit-cake pt-4 pb-4 mb-5">Fruitcake donut gummies. Candy liquorice biscuit. Sugar plum jelly gummi bears
+            brownie toffee cupcake caramels brownie cookie.</p>
+          <div class="text-center-button mb-5">
+          <a href="" class="cta-button mt-4"><img src="assets/images/phone-icon.png" alt="" class="phone-class">Downlaod on AppStore</a>
+        </div>
+        </div>
+        <div class="col-md-6 pt-6">
+          <div class="text-center">
+            <img src="assets/images/iphone.png" class="img-fluid" alt="iphone">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+<!-- APP FEATURES SECTION -->
+  <section id="app-feature" class="mt-4 mb-5">
+    <div class="container">
+      <h2 class="text-center">App Features</h2>
+      <p class="app-feature-description text-justify">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.Croissant ice cream macaroon cake. Dessert jelly beans candy cookie.</p>
+      <div class="row mt-5">
+        <div class="col-md-4">
+          <div class="text-center">
+            <img src="assets/images/icon1.png" alt="">
+          </div>
+          <h4 class="text-center mt-3 mb-3">Scalable</h4>
+          <p class="text-justify">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+        </div>
+        <div class="col-md-4">
+          <div class="text-center">
+            <img src="assets/images/icon2.png" alt="">
+          </div>
+          <h4 class="text-center mt-3 mb-3">instant</h4>
+          <p class="text-justify">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+        </div>
+        <div class="col-md-4">
+          <div class="text-center">
+            <img src="assets/images/icon3.png" alt="">
+          </div>
+          <h4 class="text-center mt-3 mb-3">something</h4>
+          <p class="text-justify">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+        </div>
+      </div>
+    </div>
 
-<script type="text/javascript" src="assets/js/jquery.min.js"></script>
-<script type="text/javascript" src="assets/js/bootstrap.js"></script>
-<script type="text/javascript" src="assets/js/main.js"></script>
+  </section>
+<!-- // APP FEATURES SECTION -->
+
+<!-- JOKER SECTION -->
+<section id="joker-section">
+  <div class="container">
+    <div class="row mt-6">
+      <div class="col-md-10">
+        <h2 class="text-carrot d-inline">Chocolate</h2>
+        <h2 class="text-white d-inline"> pudding</h2> <br>
+        <h2 class="text-white d-inline">Dessert Jelly</h2> <br>
+        <h2 class="text-carrot d-inline">Fruit</h2>
+        <h2 class="text-carrot d-inline"> Cake Tart Jelly Wa</h2>
+        <h2 class="text-white d-inline">fer.</h2>
+        <p class="text-justify mt-4">Croissant ice cream macaroon cake.</p><p> Dessert jelly beans candy cookie.</p><p> Bear claw candy canes gingerbread caramels cake.</p><p>Macaroon applicake gummi bears jelly marzipan.</p>
+        
+        <div class="mt-5 inline-block">
+          <a href="" class="download-btn d-block">Download</a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<!-- // JOKER SECTION -->
+
+  <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+  <script type="text/javascript" src="assets/js/bootstrap.js"></script>
+  <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
+
 </html>
