--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col-md-6 pt-6">
           <div class="text-center">
-            <img src="assets/images/iphone.png" class="img-fluid" alt="iphone">
+            <img src="assets/images/iphone.png" class="img-fluid-iphone" alt="iphone">
           </div>
         </div>
       </div>
@@ -127,6 +127,62 @@
   </div>
 </section>
 <!-- // JOKER SECTION -->
+
+<!-- // FOOTER SECTION -->
+<section id="footer">
+  <div class="container">
+    <div class="logo">
+      <img src="assets/images/logo.png" alt="">
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-4">
+        <h4>Papular Posts</h4>
+            <img src="assets/images//footer-icon.png" class="d-inline mr-2 mb-2" alt="">
+            <p class="text-white d-inline">I Love Donut
+              Bonbon Cackes</p>
+              <br>
+              <img src="assets/images//footer-icon.png" class="d-inline mr-2 mb-2" alt="">
+            <p class="text-white d-inline">I Love Donut
+              Bonbon Cackes</p>
+              <br>
+              <img src="assets/images//footer-icon.png" class="d-inline mr-2 mb-2" alt="">
+            <p class="text-white d-inline">I Love Donut
+              Bonbon Cackes</p>
+      </div>
+      <div class="col-md-4">
+        <h4>Suits on Twitter</h4>
+        <h6 class="mt-4">SedLex</h6>
+        <p class="time">10 Hours Ago</p>
+        <p class="text-white">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <h6 class="mt-4">Follow Us</h6>
+
+      </div>
+      <div class="col-md-4">
+        <h4>About</h4>
+        <p class="about mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- // FOOTER SECTION -->
+
+<!--  COPYRIGHT SECTION -->
+<section id="copyright">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <p class="d-inline">Copyright @ Engr Adnan Ali 2022 | www.engradnanali1928.com |</p>
+        <div class="social-media-icons d-inline">
+          <img src="assets/images/facebook.png" class="img-fluid img-pad" alt="">
+          <img src="assets/images/twitter.png" class="img-fluid img-pad" alt="">
+          <img src="assets/images/dripple.png" class="img-fluid img-pad" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- // COPYRIGHT SECTION -->
+
 
   <script type="text/javascript" src="assets/js/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.js"></script>
