--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   </section>
 <!-- APP FEATURES SECTION -->
   <section id="app-feature" class="mt-4 mb-5">
-    <div class="container">
+    <div class="container text-center">
       <h2 class="text-center">App Features</h2>
-      <p class="app-feature-description text-justify">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.Croissant ice cream macaroon cake. Dessert jelly beans candy cookie.</p>
+      <p class="app-feature-description">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.Croissant ice cream macaroon cake. Dessert jelly beans candy cookie.</p>
       <div class="row mt-5">
         <div class="col-md-4">
           <div class="text-center">
@@ -171,7 +171,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <p class="d-inline">Copyright @ Engr Adnan Ali 2022 | www.engradnanali1928.com |</p>
+        <p class="d-inline vertical-align">Copyright @ Engr Adnan Ali 2022 | www.engradnanali1928.com |</p>
         <div class="social-media-icons d-inline">
           <img src="assets/images/facebook.png" class="img-fluid img-pad" alt="">
           <img src="assets/images/twitter.png" class="img-fluid img-pad" alt="">
