--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 
 
@@ -25,7 +26,7 @@
     <div class="container">
       <div class="pt-5">
         <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a>
+          <a class="navbar-brand" href="#"><img src="assets/images/logo.png" class="animated slideInUp"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -64,9 +65,12 @@
           <a href="" class="cta-button mt-4"><img src="assets/images/phone-icon.png" alt="" class="phone-class">Downlaod on AppStore</a>
         </div>
         </div>
-        <div class="col-md-6 pt-6">
-          <div class="text-center">
-            <img src="assets/images/iphone.png" class="img-fluid-iphone" alt="iphone">
+        <div class="col-md-6 pt-6 js-wp-2">
+          <div class="imgs">
+            <img src="assets/images/2.1 iphone-btn.png.png" alt="" class="img-fluid iphone-btn">
+            <img src="assets/images/2.2 iphone-off.png.png" alt="" class="img-fluid iphone-off">
+            <img src="assets/images/2.3 iphone-on.png.png" alt="" class="img-fluid iphone-on  js-wp-3">
+            <!-- <img src="assets/images/iphone.png" class="img-fluid-iphone" alt="iphone"> -->
           </div>
         </div>
       </div>
@@ -78,21 +82,21 @@
       <h2 class="text-center">App Features</h2>
       <p class="app-feature-description">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.Croissant ice cream macaroon cake. Dessert jelly beans candy cookie.</p>
       <div class="row mt-5">
-        <div class="col-md-4">
+        <div class="col-md-4 wow fadeInLeft">
           <div class="text-center">
             <img src="assets/images/icon1.png" alt="">
           </div>
           <h4 class="text-center mt-3 mb-3">Scalable</h4>
           <p class="text-justify">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 wow fadeInUp">
           <div class="text-center">
             <img src="assets/images/icon2.png" alt="">
           </div>
           <h4 class="text-center mt-3 mb-3">instant</h4>
           <p class="text-justify">Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 wow fadeInRight">
           <div class="text-center">
             <img src="assets/images/icon3.png" alt="">
           </div>
@@ -118,7 +122,7 @@
         <h2 class="text-white d-inline">fer.</h2>
         <p class="text-justify mt-4">Croissant ice cream macaroon cake.</p><p> Dessert jelly beans candy cookie.</p><p> Bear claw candy canes gingerbread caramels cake.</p><p>Macaroon applicake gummi bears jelly marzipan.</p>
         
-        <div class="mt-5 inline-block">
+        <div class="mt-5 mb-3 inline-block">
           <a href="" class="download-btn d-block">Download</a>
         </div>
 
@@ -186,6 +190,8 @@
 
   <script type="text/javascript" src="assets/js/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.js"></script>
+  <script type="text/javascript" src="assets/js/jquery.waypoints.min.js"></script>
+  <script type="text/javascript" src="assets/js/7.1 wow.min.js.js"></script>
   <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 
